--- a/app/views/items/search.html.haml
+++ b/app/views/items/search.html.haml
@@ -10,26 +10,27 @@
 
     .pickup
     - if @items.length != 0
-      .pickup__items
+      %ul.pickup__items
         - @items.each do |item|
-          = link_to item_path(item.id) do
-            .image
-              = image_tag item.item_images[0].image_url.url, class: 'image-tag', width: '220px', height: '150px'
-              -if item.buyer_id.present?
-                .sold
-                  .sold__inner
-                    SOLD
-            .context
-              .name
-                = item.name
-              .value
+          %li.pickup__items__box
+            = link_to item_path(item.id) do
+              .image
+                = image_tag item.item_images[0].image_url.url, class: 'image-tag', width: '220px', height: '150px'
+                -if item.buyer_id.present?
+                  .sold
+                    .sold__inner
+                      SOLD
+              .context
+                .name
+                  = item.name
                 .value
-                  = (item.price * 1.1).round
-                  円
-                .evaluation
-                  ⭐️1
-              .tax
-                (税込)
+                  .value
+                    = (item.price * 1.1).round
+                    円
+                  .evaluation
+                    ⭐️1
+                .tax
+                  (税込)
   .new-footer
     .new-footer__title
       .last
